fix: text align left of th instead center

--- a/src/components/UserList/UserList.module.scss
+++ b/src/components/UserList/UserList.module.scss
@@ -13,6 +13,7 @@
   }
 
   th {
+    text-align: left;
     border-bottom: 1px solid $border;
   }
 
